style.css
body {
	background-color: rgb(0,0,0);
	color: rgb(255,255,255);
	font-family: Helvetica;	
	font-weight: lighter;
	margin: 0;
  	-ms-touch-action: none;
  	-ms-user-select: none;
}

html, body {
	height: 100%;	
	background-color: rgb(0,0,0);
}

.title {
	padding-left: 5px;
	font-size: 40px;	
	font-family: Helvetica;
	font-weight: lighter;
	position: fixed;
	top: 0px;
	background-color: rgb(0,0,0);
	z-index: 1;
	width: 100%;
}

.label {
	font-size: 12px;
	color: rgb(150,150,150);	
}

.textbox {
	font-size: 20px;
	font-family: Helvetica;
	font-weight: lighter;
	border: none;
	width: 100%;
	background-color: rgb(220,220,220);	
}

.active {
	background-color: rgb(255,255,255);	
}

div.buttons {
	position: fixed; 
	bottom: 0px; 
	left: 0px;
	width: 100%;
	text-align: center; 
	background-color: rgb(0,0,0);
	padding-top: 5px;
	background-color: rgb(30,30,30);
}

div.togglebuttons {
	background-color: rgb(30,30,30);
	text-align: right;
	padding-right: 10px;
	font-size: 10px;		
}

table.buttons {
	width: 100%; 
	font-size: 9px;
	border-collapse: collapse;
}

.list {
	width: 100%;
	padding-top: 40px;
	overflow-y: scroll;
	overflow-x: hidde;
}

ul {
	list-style-type: none;
	font-size: 20px;
}

ul li {
	background-image:url(res/call.png);
	background-repeat: no-repeat;
	background-position: 0px 0px; 
	padding-left: 60px;
	padding-bottom: 0px;
	margin-left: -40px;
	margin-top: 10px;
}

#addContactForm {
	visibility: hidden;
	position: fixed; 
	bottom: 80px;
	width: 100%; 
	background-color: rgb(0,0,0);	
}

td.label {
	font-size: 9px;
	color: rgb(255,255,255);
	padding-bottom: 35px;	
}

.number {
	font-size: 12px;
	color: rgb(150,150,150);
	position: relative;
	top: -5px;
}

.message {
	position: absolute; 
	left: 0px; 
	top: 0px; 
	width: 100%; 
	height: 100%;
	text-align: center; 
	padding-top: 200px;
	background-color: rgb(0,0,0);
	opacity: 0.8;
	visibility: hidden;
}

.button {
	padding-top: 3px;
	border: 3px solid rgb(255,255,255);
	background-color: rgb(0,0,0); 
	color: rgb(255,255,255); 
	font-size: 23px; 
	font-family: Helvetica;	
	font-weight: lighter;	
	width: 100px;
}

.loading {
	position: absolute;
	top: 0px;
	left: 0px;
	background-color: rgb(0,0,0);
	background-image: url(res/progress.gif);
	background-repeat: no-repeat;
	background-position: center;
	width: 100%;
	height: 100%;
}

